--- a/newifi3clash.config
+++ b/newifi3clash.config
@@ -95,14 +95,21 @@ CONFIG_PACKAGE_luci-app-wifischedule=y
 CONFIG_PACKAGE_luci-app-mtwifi=n
 #CONFIG_PACKAGE_luci-app-ramfree=y #释放内存
 CONFIG_PACKAGE_iperf3=y
-CONFIG_PACKAGE_luci-app-advanced=y # 高级设置
+CONFIG_PACKAGE_luci-app-advanced=y #文件管理
+
+# DDNS 相关
+#CONFIG_PACKAGE_luci-app-ddns=y
+#CONFIG_PACKAGE_ddns-scripts_aliyun=y
+#CONFIG_PACKAGE_ddns-scripts_dnspod=y
+#CONFIG_PACKAGE_ddns-scripts_cloudflare.com-v4=y
+#CONFIG_PACKAGE_ddns-scripts_freedns_42_pl=y
+#CONFIG_PACKAGE_ddns-scripts_no-ip_com=y
 
 # 常用LuCI插件:
 #CONFIG_PACKAGE_luci-app-adbyby-plus=y #adbyby去广告
 CONFIG_PACKAGE_luci-app-guest-wifi=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-webadmin=y #Web管理页面设置
-CONFIG_PACKAGE_luci-app-ddns=n #DDNS服务
 CONFIG_PACKAGE_luci-app-vlmcsd=n #KMS激活服务器
 CONFIG_PACKAGE_luci-app-filetransfer=y #系统-文件传输
 CONFIG_PACKAGE_luci-app-autoreboot=y #定时重启
@@ -140,19 +147,20 @@ CONFIG_PACKAGE_luci-app-openclash=y #OpenClash
 # CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set #ipsec VPN服务
 #CONFIG_PACKAGE_luci-app-openvpn-server=y #openvpn服务
 # CONFIG_PACKAGE_luci-app-softethervpn is not set #SoftEtherVPN服务器
+CONFIG_PACKAGE_luci-app-ssrserver-python=y
 
 # ShadowsocksR插件:
-CONFIG_PACKAGE_luci-app-ssr-plus=y
+#CONFIG_PACKAGE_luci-app-ssr-plus=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=n
-#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks=n
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=n
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=n
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=n
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
-
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=n
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
+#Include ShadowsocksR Libev Client
+#CONFIG_PACKAGE_xray-geodata=y
 
 
 # Passwall插件:
@@ -198,11 +206,11 @@ CONFIG_PACKAGE_trojan-plus=n
 # 主题
 #
 # CONFIG_PACKAGE_luci-theme-atmaterial=y
-#CONFIG_PACKAGE_luci-theme-argon_new=y
+CONFIG_PACKAGE_luci-theme-argon_new=y
 # CONFIG_PACKAGE_luci-theme-netgear=y
 # CONFIG_PACKAGE_luci-theme-edge=y
 #CONFIG_PACKAGE_luci-theme-material=y
-CONFIG_PACKAGE_luci-theme-argon=y
+#CONFIG_PACKAGE_luci-theme-argon=y
 #CONFIG_PACKAGE_luci-app-argon-config=y
 #CONFIG_PACKAGE_luci-theme-bootstrap=n
 
