--- a/newifi3ssrp.config
+++ b/newifi3ssrp.config
@@ -142,7 +142,7 @@ CONFIG_PACKAGE_luci-app-openclash=y #OpenClash
 
 # VPN相关插件(禁用):
 #
-# CONFIG_PACKAGE_luci-app-v2ray-server=y #V2ray服务器
+CONFIG_PACKAGE_luci-app-v2ray-server=y #V2ray服务器
 #CONFIG_PACKAGE_luci-app-pptp-server=n #PPTP VPN 服务器
 # CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set #ipsec VPN服务
 #CONFIG_PACKAGE_luci-app-openvpn-server=y #openvpn服务
@@ -156,11 +156,17 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=n
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=n
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=n
-#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=n
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
-#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
-#Include ShadowsocksR Libev Client
-CONFIG_PACKAGE_xray-geodata=y
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=n
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Client=y
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Server=y
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust_Client=y
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust_Server=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Client=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Server=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_Obfs=y
 
 
 # Passwall插件:
@@ -197,8 +203,8 @@ CONFIG_PACKAGE_trojan-plus=n
 # CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
 #CONFIG_PACKAGE_pdnsd-alt=y
 #CONFIG_PACKAGE_dns2socks=y
-#CONFIG_PACKAGE_xray-core=y
-#CONFIG_PACKAGE_xray-geodata=y
+CONFIG_PACKAGE_xray-core=y
+# CONFIG_PACKAGE_xray-geodata=y
 
 
 #
@@ -210,7 +216,7 @@ CONFIG_PACKAGE_luci-theme-argon_new=y
 # CONFIG_PACKAGE_luci-theme-edge=y
 #CONFIG_PACKAGE_luci-theme-material=y
 #CONFIG_PACKAGE_luci-theme-argon=y
-CONFIG_PACKAGE_luci-app-argon-config=y
+# CONFIG_PACKAGE_luci-app-argon-config=y
 #CONFIG_PACKAGE_luci-theme-bootstrap=n
 
 #
