--- a/newifi3pass.config
+++ b/newifi3pass.config
@@ -95,7 +95,7 @@ CONFIG_PACKAGE_luci-app-wifischedule=y
 CONFIG_PACKAGE_luci-app-mtwifi=n
 #CONFIG_PACKAGE_luci-app-ramfree=y #释放内存
 CONFIG_PACKAGE_iperf3=y
-CONFIG_PACKAGE_luci-app-advanced=y #文件管理
+#CONFIG_PACKAGE_luci-app-advanced=y #文件管理
 
 # DDNS 相关
 #CONFIG_PACKAGE_luci-app-ddns=y
@@ -147,6 +147,7 @@ CONFIG_PACKAGE_luci-app-openclash=y #OpenClash
 # CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set #ipsec VPN服务
 #CONFIG_PACKAGE_luci-app-openvpn-server=y #openvpn服务
 # CONFIG_PACKAGE_luci-app-softethervpn is not set #SoftEtherVPN服务器
+#CONFIG_PACKAGE_luci-app-ssrserver-python=y
 
 # ShadowsocksR插件:
 CONFIG_PACKAGE_luci-app-ssr-plus=n
@@ -154,59 +155,55 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=n
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=n
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks=n
-#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=n
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=n
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=n
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=n
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=n
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Client=y
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Server=y
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust_Client=y
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust_Server=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Client=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Server=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_Obfs=y
 
 
 # Passwall插件:
 CONFIG_PACKAGE_luci-app-passwall=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ipt2socks=y
-#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks=y
-#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ipt2socks=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_v2ray-plugin=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_simple-obfs=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan=n
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_simple-obfs=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_kcptun=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_haproxy=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_dns2socks=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_pdnsd=y
-#CONFIG_PACKAGE_kcptun-client=y
-# CONFIG_PACKAGE_chinadns-ng=y
-CONFIG_PACKAGE_haproxy=y
-#CONFIG_PACKAGE_v2ray=y
-#CONFIG_PACKAGE_v2ray-plugin=y
-CONFIG_PACKAGE_simple-obfs=n
-CONFIG_PACKAGE_trojan=n
-CONFIG_PACKAGE_trojan-go=n
-CONFIG_PACKAGE_trojan-plus=n
-# CONFIG_PACKAGE_brook=y
-CONFIG_PACKAGE_ipt2socks=y
-# CONFIG_PACKAGE_shadowsocks-libev-config=y
-# CONFIG_PACKAGE_shadowsocks-libev-ss-local=y
-# CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y
-# CONFIG_PACKAGE_shadowsocksr-libev-alt=y
-# CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
-CONFIG_PACKAGE_pdnsd-alt=y
-#CONFIG_PACKAGE_dns2socks=y
-CONFIG_PACKAGE_xray-core=y
-#CONFIG_PACKAGE_xray-geodata=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Server=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Server=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_GO=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
+
 
 #
 # 主题
 #
 # CONFIG_PACKAGE_luci-theme-atmaterial=y
-CONFIG_PACKAGE_luci-theme-argon_new=y
+# CONFIG_PACKAGE_luci-theme-argon_new=y
 # CONFIG_PACKAGE_luci-theme-netgear=y
 # CONFIG_PACKAGE_luci-theme-edge=y
 #CONFIG_PACKAGE_luci-theme-material=y
-#CONFIG_PACKAGE_luci-theme-argon=y
-CONFIG_PACKAGE_luci-app-argon-config=y
+CONFIG_PACKAGE_luci-theme-argon=y
+# CONFIG_PACKAGE_luci-app-argon-config=y
 #CONFIG_PACKAGE_luci-theme-bootstrap=n
 
 #
