--- a/newifi3ssrp.config
+++ b/newifi3ssrp.config
@@ -151,21 +151,22 @@ CONFIG_PACKAGE_luci-app-openclash=y #OpenClash
 
 # ShadowsocksR插件:
 CONFIG_PACKAGE_luci-app-ssr-plus=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
-#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=y
+CONFIG_PACKAGE_Xray=y
+#CONFIG_PACKAGE_NaiveProxy=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=n
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=n
-#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=n
+CONFIG_PACKAGE_Trojan=n
+#CONFIG_PACKAGE_Kcptun=n
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=n
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Client=y
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Server=y
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust_Client=y
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust_Server=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Client=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Server=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_Obfs=y
+#CONFIG_PACKAGE_Redsocks2=y
+# CONFIG_PACKAGE_Shadowsocks_Libev_Client=y
+# CONFIG_PACKAGE_Shadowsocks_Libev_Server=y
+# CONFIG_PACKAGE_Shadowsocks_Rust_Client=y
+# CONFIG_PACKAGE_Shadowsocks_Rust_Server=y
+CONFIG_PACKAGE_ShadowsocksR_Libev_Client=y
+CONFIG_PACKAGE_ShadowsocksR_Libev_Server=y
+CONFIG_PACKAGE_Simple_Obfs=y
 
 
 # Passwall插件:
