--- a/newifi3clash.config
+++ b/newifi3clash.config
@@ -142,18 +142,20 @@ CONFIG_PACKAGE_luci-app-openclash=y #OpenClash
 
 # VPN相关插件(禁用):
 #
-# CONFIG_PACKAGE_luci-app-v2ray-server=y #V2ray服务器
 #CONFIG_PACKAGE_luci-app-pptp-server=n #PPTP VPN 服务器
 # CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set #ipsec VPN服务
 #CONFIG_PACKAGE_luci-app-openvpn-server=y #openvpn服务
 # CONFIG_PACKAGE_luci-app-softethervpn is not set #SoftEtherVPN服务器
 #CONFIG_PACKAGE_luci-app-ssrserver-python=y
+#CONFIG_PACKAGE_luci-app-v2ray-server=y #V2ray服务器
+#CONFIG_PACKAGE_v2ray=y
+#CONFIG_PACKAGE_v2ray-plugin=y
 
 # vssr
 CONFIG_PACKAGE_luci-app-vssr=y
 CONFIG_PACKAGE_Trojan=n
 CONFIG_PACKAGE_V2ray=y
-CONFIG_PACKAGE_ShadowsocksR_Libev_Server=y
+#CONFIG_PACKAGE_ShadowsocksR_Libev_Server=y
 
 # ShadowsocksR插件:
 #CONFIG_PACKAGE_luci-app-ssr-plus=y
