--- a/newifi3.config
+++ b/newifi3.config
@@ -98,12 +98,12 @@ CONFIG_PACKAGE_iperf3=y
 #CONFIG_PACKAGE_luci-app-advanced=y #文件管理
 
 # DDNS 相关
-#CONFIG_PACKAGE_luci-app-ddns=y
-#CONFIG_PACKAGE_ddns-scripts_aliyun=y
-#CONFIG_PACKAGE_ddns-scripts_dnspod=y
+CONFIG_PACKAGE_luci-app-ddns=y
+CONFIG_PACKAGE_ddns-scripts_aliyun=y
+CONFIG_PACKAGE_ddns-scripts_dnspod=y
 #CONFIG_PACKAGE_ddns-scripts_cloudflare.com-v4=y
-#CONFIG_PACKAGE_ddns-scripts_freedns_42_pl=y
-#CONFIG_PACKAGE_ddns-scripts_no-ip_com=y
+CONFIG_PACKAGE_ddns-scripts_freedns_42_pl=y
+CONFIG_PACKAGE_ddns-scripts_no-ip_com=y
 
 # 常用LuCI插件:
 #CONFIG_PACKAGE_luci-app-adbyby-plus=y #adbyby去广告
@@ -142,12 +142,14 @@ CONFIG_PACKAGE_luci-app-openclash=y #OpenClash
 
 # VPN相关插件(禁用):
 #
-# CONFIG_PACKAGE_luci-app-v2ray-server=y #V2ray服务器
 #CONFIG_PACKAGE_luci-app-pptp-server=n #PPTP VPN 服务器
 # CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set #ipsec VPN服务
 #CONFIG_PACKAGE_luci-app-openvpn-server=y #openvpn服务
 # CONFIG_PACKAGE_luci-app-softethervpn is not set #SoftEtherVPN服务器
-CONFIG_PACKAGE_luci-app-ssrserver-python=y
+#CONFIG_PACKAGE_luci-app-ssrserver-python=y
+CONFIG_PACKAGE_luci-app-v2ray-server=y #V2ray服务器
+CONFIG_PACKAGE_v2ray=y
+CONFIG_PACKAGE_v2ray-plugin=y
 
 
 # ShadowsocksR插件:
