--- a/newifi3clash.config
+++ b/newifi3clash.config
@@ -23,6 +23,7 @@ CONFIG_PACKAGE_6in4=y
 #
 # samba扩展
 #
+
 CONFIG_PACKAGE_autosamba=y
 CONFIG_PACKAGE_samba36=y
 CONFIG_PACKAGE_luci-app-samba=y
@@ -97,18 +98,12 @@ CONFIG_PACKAGE_luci-app-mtwifi=n
 CONFIG_PACKAGE_iperf3=y
 #CONFIG_PACKAGE_luci-app-advanced=y #文件管理
 
-# DDNS 相关
-#CONFIG_PACKAGE_luci-app-ddns=y
-#CONFIG_PACKAGE_ddns-scripts_aliyun=y
-#CONFIG_PACKAGE_ddns-scripts_dnspod=y
-#CONFIG_PACKAGE_ddns-scripts_cloudflare.com-v4=y
-#CONFIG_PACKAGE_ddns-scripts_freedns_42_pl=y
-#CONFIG_PACKAGE_ddns-scripts_no-ip_com=y
 
 # 常用LuCI插件:
 #CONFIG_PACKAGE_luci-app-adbyby-plus=y #adbyby去广告
 CONFIG_PACKAGE_luci-app-guest-wifi=y
 CONFIG_PACKAGE_luci-app-ttyd=y
+CONFIG_PACKAGE_luci-app-ddns=y # DDNS相关
 CONFIG_PACKAGE_luci-app-webadmin=y #Web管理页面设置
 CONFIG_PACKAGE_luci-app-vlmcsd=n #KMS激活服务器
 CONFIG_PACKAGE_luci-app-filetransfer=y #系统-文件传输
@@ -146,77 +141,66 @@ CONFIG_PACKAGE_luci-app-openclash=y #OpenClash
 # CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set #ipsec VPN服务
 #CONFIG_PACKAGE_luci-app-openvpn-server=y #openvpn服务
 # CONFIG_PACKAGE_luci-app-softethervpn is not set #SoftEtherVPN服务器
-#CONFIG_PACKAGE_luci-app-ssrserver-python=y
+#  CONFIG_PACKAGE_luci-app-ssrserver-python=y
 #CONFIG_PACKAGE_luci-app-v2ray-server=y #V2ray服务器
 #CONFIG_PACKAGE_v2ray=y
 #CONFIG_PACKAGE_v2ray-plugin=y
 
-# vssr
-CONFIG_PACKAGE_luci-app-vssr=y
-CONFIG_PACKAGE_Trojan=n
-CONFIG_PACKAGE_V2ray=y
-#CONFIG_PACKAGE_ShadowsocksR_Libev_Server=y
 
 # ShadowsocksR插件:
-#CONFIG_PACKAGE_luci-app-ssr-plus=y
+CONFIG_PACKAGE_luci-app-ssr-plus=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
-#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=y
+#CONFIG_PACKAGE_NaiveProxy=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=n
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=n
-#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=n
-#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
-#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
-
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=n
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Client=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Server=y
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust_Client=y
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust_Server=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Client=y
+#  CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Server=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_Obfs=y
 
 # Passwall插件:
-#CONFIG_PACKAGE_luci-app-passwall=y
+CONFIG_PACKAGE_luci-app-passwall=n
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ipt2socks=y
-#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks=y
-#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR=y
-#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_v2ray-plugin=y
-#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_simple-obfs=n
-#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan=n
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_simple-obfs=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan=n
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_kcptun=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_haproxy=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_dns2socks=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_pdnsd=y
-#CONFIG_PACKAGE_kcptun-client=y
-# CONFIG_PACKAGE_chinadns-ng=y
-#CONFIG_PACKAGE_haproxy=y
-#CONFIG_PACKAGE_v2ray=y
-#CONFIG_PACKAGE_v2ray-plugin=y
-CONFIG_PACKAGE_simple-obfs=n
-CONFIG_PACKAGE_trojan=n
-CONFIG_PACKAGE_trojan-go=n
-CONFIG_PACKAGE_trojan-plus=n
-# CONFIG_PACKAGE_brook=y
-# CONFIG_PACKAGE_ipt2socks=y
-# CONFIG_PACKAGE_shadowsocks-libev-config=y
-# CONFIG_PACKAGE_shadowsocks-libev-ss-local=y
-# CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y
-# CONFIG_PACKAGE_shadowsocksr-libev-alt=y
-# CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
-#CONFIG_PACKAGE_pdnsd-alt=y
-#CONFIG_PACKAGE_dns2socks=y
-#CONFIG_PACKAGE_xray-core=y
-#CONFIG_PACKAGE_xray-geodata=y
-
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria=y
+# CONFIG_PACKAGE_NaiveProxy=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Server=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client=y
+#  CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Server=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_GO=n
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=n
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
 
 
 #
 # 主题
 #
-# CONFIG_PACKAGE_luci-theme-atmaterial=y
-CONFIG_PACKAGE_luci-theme-argon_new=y
+#CONFIG_PACKAGE_luci-theme-atmaterial=y
+# CONFIG_PACKAGE_luci-theme-argon_new=y
 # CONFIG_PACKAGE_luci-theme-netgear=y
-# CONFIG_PACKAGE_luci-theme-edge=y
-#CONFIG_PACKAGE_luci-theme-material=y
+CONFIG_PACKAGE_luci-theme-edge=y
+#  CONFIG_PACKAGE_luci-theme-material=y
 #CONFIG_PACKAGE_luci-theme-argon=y
-#CONFIG_PACKAGE_luci-app-argon-config=y
+# CONFIG_PACKAGE_luci-app-argon-config=y
 #CONFIG_PACKAGE_luci-theme-bootstrap=n
 
 #
