--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: Build OpenWrt
+name: newifi3-test
 
 on:
   repository_dispatch:
@@ -23,7 +23,7 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: newifi3ssrp.config
+  CONFIG_FILE: newifi3test.config
   DIY_P1_SH: source1.sh
   DIY_P2_SH: diy-part2.sh
   UPLOAD_BIN_DIR: true
