--- a/newifi3test.config
+++ b/newifi3test.config
@@ -143,13 +143,14 @@ CONFIG_PACKAGE_luci-app-openclash=y #OpenClash
 # CONFIG_PACKAGE_luci-app-softethervpn is not set #SoftEtherVPN服务器
 #CONFIG_PACKAGE_luci-app-ssrserver-python=y
 CONFIG_PACKAGE_luci-app-xray=y #xray服务器
+CONFIG_PACKAGE_Xray=y
 #CONFIG_PACKAGE_v2ray=y
 #CONFIG_PACKAGE_v2ray-plugin=y
 
 
 # ShadowsocksR插件:
 CONFIG_PACKAGE_luci-app-ssr-plus=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_
 #CONFIG_PACKAGE_NaiveProxy=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=n
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=n
