--- a/newifi-y1.config
+++ b/newifi-y1.config
@@ -131,7 +131,7 @@ CONFIG_PACKAGE_luci-app-diskman=y #磁盘管理磁盘信息
 #CONFIG_PACKAGE_luci-app-openvpn-server=y #openvpn服务
 # CONFIG_PACKAGE_luci-app-softethervpn is not set #SoftEtherVPN服务器
 #  CONFIG_PACKAGE_luci-app-ssrserver-python=y
-CONFIG_PACKAGE_luci-app-v2ray-server=y #V2ray服务器
+#CONFIG_PACKAGE_luci-app-v2ray-server=y #V2ray服务器
 #CONFIG_PACKAGE_luci-app-v2ray-server_INCLUDE_v2ray=y
 #CONFIG_PACKAGE_luci-app-v2ray-server_INCLUDE_v2ray-plugin=y
 
