--- a/newifi-mini.config
+++ b/newifi-mini.config
@@ -87,7 +87,7 @@ CONFIG_PACKAGE_librrd1=y
 # CONFIG_PACKAGE_luci-app-filetransfer is not set
 CONFIG_PACKAGE_luci-app-qos=y
 CONFIG_PACKAGE_luci-app-sqm=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
 CONFIG_PACKAGE_luci-app-statistics=y
 # CONFIG_PACKAGE_luci-app-unblockmusic is not set
 # CONFIG_PACKAGE_luci-app-vsftpd is not set
@@ -99,7 +99,7 @@ CONFIG_PACKAGE_qos-scripts=y
 CONFIG_PACKAGE_rrdtool1=y
 CONFIG_PACKAGE_sqm-scripts=y
 CONFIG_PACKAGE_tc=y
-CONFIG_PACKAGE_v2ray=y
+#CONFIG_PACKAGE_v2ray=y
 # CONFIG_PACKAGE_vsftpd-alt is not set
 CONFIG_PACKAGE_wifi-l1profile=y
 CONFIG_PACKAGE_wpad=y
@@ -127,7 +127,7 @@ CONFIG_first_card_single_sku_path="/etc/wireless/mediatek/mt7615e-sku.dat"
 CONFIG_first_card_wds_ifname="wds"
 
 
-CONFIG_PACKAGE_luci-app-v2ray-server=y #V2ray服务器
+#CONFIG_PACKAGE_luci-app-v2ray-server=y #V2ray服务器
 
 CONFIG_PACKAGE_6in4=y
 
