--- a/newifi3test.config
+++ b/newifi3test.config
@@ -131,8 +131,8 @@ CONFIG_PACKAGE_luci-app-diskman=y #磁盘管理磁盘信息
 CONFIG_PACKAGE_luci-app-openclash=y #OpenClash
 #CONFIG_PACKAGE_luci-app-serverchan=y #微信推送
 #CONFIG_PACKAGE_luci-app-eqos=y #IP限速
-#CONFIG_PACKAGE_luci-app-adguardhome=y #ADguardhome
-#CONFIG_PACKAGE_AdGuardHome=y
+CONFIG_PACKAGE_luci-app-adguardhome=y #ADguardhome
+CONFIG_PACKAGE_AdGuardHome=y
 
 
 # VPN相关插件(禁用):
