--- a/newifi3test.config
+++ b/newifi3test.config
@@ -161,7 +161,7 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Client=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_Plugin=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Client=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_Obfs=y
-CONFIG_PACKAGE_xray-plugin=y
+#CONFIG_PACKAGE_xray-plugin=y
 
 # Passwall插件:
 CONFIG_PACKAGE_luci-app-passwall=n
