--- a/newifi3test.config
+++ b/newifi3test.config
@@ -132,7 +132,7 @@ CONFIG_PACKAGE_luci-app-openclash=y #OpenClash
 #CONFIG_PACKAGE_luci-app-serverchan=y #微信推送
 #CONFIG_PACKAGE_luci-app-eqos=y #IP限速
 CONFIG_PACKAGE_luci-app-adguardhome=y #ADguardhome
-CONFIG_PACKAGE_AdGuardHome=y
+#CONFIG_PACKAGE_AdGuardHome=y
 
 
 # VPN相关插件(禁用):
@@ -145,7 +145,6 @@ CONFIG_PACKAGE_AdGuardHome=y
 #CONFIG_PACKAGE_luci-app-xray=y #xray服务器
 #CONFIG_PACKAGE_Xray=y
 #CONFIG_PACKAGE_v2ray=y
-
 
 
 # ShadowsocksR插件:
