--- a/newifi3.config
+++ b/newifi3.config
@@ -97,7 +97,8 @@ CONFIG_PACKAGE_luci-app-mtwifi=n
 #CONFIG_PACKAGE_luci-app-ramfree=y #释放内存
 CONFIG_PACKAGE_iperf3=y
 #CONFIG_PACKAGE_luci-app-advanced=y #文件管理
-
+CONFIG_PACKAGE_luci-app-nps=y
+CONFIG_PACKAGE_luci-app-watchcat=y
 
 # 常用LuCI插件:
 #CONFIG_PACKAGE_luci-app-adbyby-plus=y #adbyby去广告
@@ -131,7 +132,7 @@ CONFIG_PACKAGE_luci-app-diskman=y #磁盘管理磁盘信息
 #CONFIG_PACKAGE_luci-app-openclash=y #OpenClash
 #CONFIG_PACKAGE_luci-app-serverchan=y #微信推送
 #CONFIG_PACKAGE_luci-app-eqos=y #IP限速
-#CONFIG_PACKAGE_luci-app-adguardhome=y #ADguardhome
+CONFIG_PACKAGE_luci-app-adguardhome=y #ADguardhome
 #CONFIG_PACKAGE_AdGuardHome=y
 
 
@@ -142,7 +143,7 @@ CONFIG_PACKAGE_luci-app-diskman=y #磁盘管理磁盘信息
 #CONFIG_PACKAGE_luci-app-openvpn-server=y #openvpn服务
 # CONFIG_PACKAGE_luci-app-softethervpn is not set #SoftEtherVPN服务器
 CONFIG_PACKAGE_luci-app-ssrserver-python=y
-#  CONFIG_PACKAGE_luci-app-v2ray-server=y #V2ray服务器
+CONFIG_PACKAGE_luci-app-v2ray-server=y #V2ray服务器
 #  CONFIG_PACKAGE_luci-app-v2ray-server_INCLUDE_v2ray=y
 # CONFIG_PACKAGE_luci-app-v2ray-server_INCLUDE_v2ray-plugin=y
 
