--- a/newifi3.config
+++ b/newifi3.config
@@ -133,7 +133,7 @@ CONFIG_PACKAGE_luci-app-diskman=y #磁盘管理磁盘信息
 #CONFIG_PACKAGE_luci-app-serverchan=y #微信推送
 #CONFIG_PACKAGE_luci-app-eqos=y #IP限速
 CONFIG_PACKAGE_luci-app-adguardhome=y #ADguardhome
-#CONFIG_PACKAGE_AdGuardHome=y
+CONFIG_PACKAGE_AdGuardHome=n
 
 
 # VPN相关插件(禁用):
@@ -143,7 +143,7 @@ CONFIG_PACKAGE_luci-app-adguardhome=y #ADguardhome
 #CONFIG_PACKAGE_luci-app-openvpn-server=y #openvpn服务
 # CONFIG_PACKAGE_luci-app-softethervpn is not set #SoftEtherVPN服务器
 CONFIG_PACKAGE_luci-app-ssrserver-python=y
-CONFIG_PACKAGE_luci-app-v2ray-server=y #V2ray服务器
+#CONFIG_PACKAGE_luci-app-v2ray-server=y #V2ray服务器
 #  CONFIG_PACKAGE_luci-app-v2ray-server_INCLUDE_v2ray=y
 # CONFIG_PACKAGE_luci-app-v2ray-server_INCLUDE_v2ray-plugin=y
 
@@ -151,15 +151,15 @@ CONFIG_PACKAGE_luci-app-v2ray-server=y #V2ray服务器
 # ShadowsocksR插件:
 CONFIG_PACKAGE_luci-app-ssr-plus=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=n
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=n
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
-#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Client=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Client=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Server=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_Obfs=y
-CONFIG_PACKAGE_xray-plugin=y
+#CONFIG_PACKAGE_xray-plugin=y
 
 # Passwall插件:
 CONFIG_PACKAGE_luci-app-passwall=n
